# NaturalIntelligence

./: README.md
NI_simulations/: README.md
NI_simulations/anymal_c/: README.md
NI_simulations/anymal_c/anymal_c_description/: CMakeLists.txt  package.xml
NI_simulations/anymal_c/anymal_c_description/urdf/: anymal.urdf
NI_simulations/anymal_c/anymal_c_gazebo/: CMakeLists.txt  README.md  package.xml
NI_simulations/anymal_c/anymal_c_gazebo/launch/: anymal_c_world.launch  dune.launch  dune1.launch  forest.launch  grassland.launch  mountain.launch  mountain1.launch  mountain2.launch  prova.launch  rviz.launch  test.launch  test1.launch
NI_simulations/anymal_c/anymal_c_gazebo/worlds/: anymal_c.world  forest.world  grassland.world  mountain.world  mountain1.world  mountain2.world  prova.world  test.world  test1.world
NI_simulations/first_goat/: README.md
NI_simulations/first_goat/goat_command/: CMakeLists.txt  package.xml
NI_simulations/first_goat/goat_command/config/: config_command.yaml
NI_simulations/first_goat/goat_command/launch/: set_command.launch
NI_simulations/first_goat/goat_command/src/: give_command.cpp
NI_simulations/first_goat/goat_description/: CMakeLists.txt  package.xml
NI_simulations/first_goat/goat_gazebo/: CMakeLists.txt  package.xml
NI_simulations/second_goat/: README.md
NI_simulations/second_goat/second_goat_description/: CMakeLists.txt  package.xml
NI_simulations/second_goat/second_goat_description/config/: second_goat_config.yaml  second_goat_rviz.rviz
NI_simulations/second_goat/second_goat_description/launch/: rviz.launch
NI_simulations/second_goat/second_goat_description/meshes/: Claw.stl  MirrorClaw.stl
NI_simulations/second_goat/second_goat_description/urdf/: second_goat_robot.urdf
NI_simulations/second_goat/second_goat_description/urdf/base/: second_goat_base.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/: second_goat_leg.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/femur/: second_goat_femur.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/hip_base/: second_goat_hip_base.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/hip_base_link/: second_goat_hip_base_link.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/hip_joint/: second_goat_hip_joint.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/knee/: second_goat_knee_joint.xacro
NI_simulations/second_goat/second_goat_description/urdf/leg/shank/: second_goat_shank.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/: goat_hoof.urdf
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/: hoof.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/claw/: claw.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/coffin_joint/: coffin_joint.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/declaw/: declaw.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/fetlock_joint/: fetlock_joint.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/pastern_joint/: pastern_joint.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/hoof/phalange/: phalange.xacro
NI_simulations/second_goat/second_goat_description/urdf_hoof/metacarpus/: metacarpus.xacro
NI_simulations/second_goat/second_goat_gazebo/: CMakeLists.txt  package.xml
NI_simulations/softfeet/: README.md
NI_simulations/softfeet/softfoot_thing/: CMakeLists.txt  package.xml
NI_simulations/softfeet/softfoot_thing_description/: CMakeLists.txt  README.md  package.xml
NI_simulations/softfeet/softfoot_thing_description/configs/: foot_controllers.yaml  pisa_softfoot.rviz
NI_simulations/softfeet/softfoot_thing_description/launch/: floating_foot.launch  foot_on_objects.launch  four_feet.launch  pisa_softfoot.launch  vertical_foot.launch
NI_simulations/softfeet/softfoot_thing_description/meshes/collision/: front_arch_back.stl  front_arch_front.stl  inner_chain.stl  roll_link_v04.stl
NI_simulations/softfeet/softfoot_thing_description/meshes/visual/: ankle.stl  ankle.txt  front_arch_back.txt  front_arch_front.txt  inner_chain.txt  outer_chain.stl  outer_chain.txt  roll_link_v04.txt
NI_simulations/softfeet/softfoot_thing_description/model/: chain_thing.urdf.xacro  chain_thing_inertia.xacro  chain_thing_materials.xacro  softfoot_thing.gazebo.xacro  softfoot_thing.transmission.xacro  softfoot_thing.urdf.xacro  softfoot_thing_inertia.xacro  softfoot_thing_materials.xacro
NI_simulations/softfeet/softfoot_thing_description/robot/: floating_softfoot.urdf.xacro  four_floating_feet.urdf.xacro  four_softfeet.urdf.xacro  pisa_softfoot.urdf.xacro  vertical_softfoot.urdf.xacro
NI_simulations/softfeet/softfoot_thing_description/worlds/: objects_softfoot.world  pisa_softfoot.world
NI_simulations/softfeet/softfoot_thing_gazebo/: CMakeLists.txt  README.md  package.xml
NI_simulations/softfeet/softfoot_thing_gazebo/include/softfoot_thing_gazebo/: softfoot_gazebo_plugin.hpp
NI_simulations/softfeet/softfoot_thing_gazebo/src/: softfoot_gazebo_plugin.cpp
NI_simulations/softfeet/softfoot_thing_gazebo/src/utils/: parsing_utilities.cpp
NI_simulations/softfeet/softfoot_thing_visualization/: CMakeLists.txt  README.md  package.xml
NI_simulations/softfeet/softfoot_thing_visualization/configs/: pisa_softfoot.rviz  pisa_softfoot_viz.yaml  softfoot_1.yaml  softfoot_2.yaml  softfoot_3.yaml  softfoot_4.yaml
NI_simulations/softfeet/softfoot_thing_visualization/include/softfoot_thing_visualization/: joints_estimator.h
NI_simulations/softfeet/softfoot_thing_visualization/launch/: pisa_softfoot_calibration.launch  pisa_softfoot_calibration_base.launch  pisa_softfoot_visualization.launch  record_bags.launch
NI_simulations/softfeet/softfoot_thing_visualization/src/: calibration_node.cpp  joints_estimator.cpp  joints_estimator_node.cpp
NI_simulations/softfeet/softfoot_thing_visualization/src/utils/: parsing_utilities.cpp
(+103 files in other folders)
