<?xml version="1.0"?>
<package>
  <name>softfoot_thing_description</name>
  <version>1.0.0</version>
  <description>The softfoot_thing_description package</description>

  <author email="mathewjose.pollayil@phd.unipi.it">Mathew Jose Pollayil</author>
  <maintainer email="georgejose.pollayil@phd.unipi.it">George Jose Pollayil</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>

  <export>
  </export>
</package>