<?xml version="1.0"?>
<package>
  <name>softfoot_thing_visualization</name>
  <version>1.0.0</version>
  <description>The softfoot_thing_visualization contains a node that estimates the foot joint angles from IMU readings.</description>

  <author email="mathewjose.pollayil@phd.unipi.it">Mathew Jose Pollayil</author>
  <maintainer email="georgejose.pollayil@phd.unipi.it">George Jose Pollayil</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>qb_interface</build_depend>
  <build_depend>nmmi_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>filters</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>qb_interface</run_depend>
  <run_depend>nmmi_msgs</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>filters</run_depend>
  <run_depend>rviz</run_depend>

  <export>

  </export>
</package>
